style tweaks for bottom control layout bug on handheld devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,9 @@ body {
 }
 
 .App {
+  display: flex;
+  flex-flow: column;
+  height: 100vh;
   &.picking-location {
     #{$non-map-top-level-components} {
       cursor: not-allowed !important;
@@ -198,8 +201,8 @@ aside {
 }
 
 .app-container {
+  flex: 1;
   position: relative;
-  height: calc(100vh - var(--nav-height));
   width: 100vw;
   z-index: 1;
 
@@ -231,7 +234,7 @@ aside {
   }
 
   .mapboxgl-map {
-    height: calc(100vh - var(--nav-height));
+    height: 100%;
     transition: width .3s ease-in-out;
     width: 100vw;
   }
@@ -247,7 +250,7 @@ aside {
   display: flex;
   flex-flow: column;
   flex-grow: 0;
-  height: calc(100vh - var(--nav-height));
+  height: 100%;
   position: absolute;
   right: 0;
   transition: transform .3s ease-in-out;
